// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildBacktestRequest > matches candle engine snapshot with fixed_quantity sizing and no costs 1`] = `
{
  "day_trade": false,
  "day_trade_close_time": "17:00",
  "day_trade_end_time": "16:00",
  "day_trade_start_time": "09:00",
  "end": "2026-06-12T02:59:59.999Z",
  "initial_capital": 100000,
  "point_value": 1,
  "position_sizing": {
    "quantity": 1,
    "type": "fixed_quantity",
  },
  "start": "2025-06-11T03:00:00.000Z",
  "strategy": "MACrossover",
  "strategy_params": {
    "long_ma_type": "sma",
    "long_period": 200,
    "short_ma_type": "sma",
    "short_period": 50,
    "threshold": 0,
  },
  "symbol": "PETR4",
  "timeframe": "D1",
}
`;

exports[`buildBacktestRequest > matches candle snapshot with safety margin sizing and costs 1`] = `
{
  "costs": {
    "cost_bps": 1.25,
    "cost_per_contract": 5,
  },
  "day_trade": false,
  "day_trade_close_time": "17:00",
  "day_trade_end_time": "16:00",
  "day_trade_start_time": "09:00",
  "end": "2026-06-12T02:59:59.999Z",
  "initial_capital": 100000,
  "point_value": 1,
  "position_sizing": {
    "max_contracts": 10,
    "min_contracts": 2,
    "safety_margin_per_contract": 5000,
    "type": "fixed_safety_margin",
  },
  "start": "2025-06-11T03:00:00.000Z",
  "strategy": "MACrossover",
  "strategy_params": {
    "long_ma_type": "sma",
    "long_period": 60,
    "short_ma_type": "ema",
    "short_period": 20,
    "threshold": 0.5,
  },
  "symbol": "PETR4",
  "timeframe": "D1",
}
`;

exports[`buildBacktestRequest > matches tick engine snapshot with inverse volatility sizing 1`] = `
{
  "day_trade": true,
  "day_trade_close_time": "16:30",
  "day_trade_end_time": "15:00",
  "day_trade_start_time": "10:00",
  "display_timeframe": "M5",
  "end": "2026-06-12T02:59:59.999Z",
  "engine": "tick",
  "initial_capital": 100000,
  "point_value": 1,
  "position_sizing": {
    "max_contracts": 6,
    "min_contracts": 1,
    "target_volatility_pct": 8,
    "type": "inverse_volatility",
  },
  "start": "2025-06-11T03:00:00.000Z",
  "strategy": "TickMaBreakout",
  "strategy_params": {
    "long_period": 200,
    "short_period": 50,
    "sl_points": 50,
    "threshold": 0,
    "tp_points": 100,
  },
  "symbol": "PETR4",
  "tick_flags": "trade",
}
`;
